Support strip comment

--- a/template/sample.html
+++ b/template/sample.html
@@ -16,6 +16,8 @@
         {% endblock %}
     </div>
 
+    {# This is a comment. #}
+
     <div id="content">
         {% block content %}{% endblock %}
     </div>
